# lecture-ai-engineering

./: pyproject.toml
day1/: day1_practice.ipynb
day1/01_streamlit_UI/: app.py
day1/03_FastAPI/: app.py
