[project]
name = "lecture-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "fastapi>=0.115.12",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "janome>=0.5.0",
    "nltk>=3.9.1",
    "pyngrok>=7.2.4",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
